CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(MusicBox)
ENABLE_LANGUAGE(Fortran)

#-----------------------------------------------------------------------------
#
# Box model
#
#-----------------------------------------------------------------------------

add_subdirectory(src)

#-----------------------------------------------------------------------------
#
# Tests
#
#-----------------------------------------------------------------------------

enable_testing()
add_subdirectory(test)

